# openfigi-etf-diff

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: client.py  config.py  main.py  models.py  scanner.py  storage.py
tests/: test_client.py  test_models.py  test_scanner.py  test_storage.py
